force-app/main/default/objects/Competitor__c/fields/Company_Facebook__c.field-meta.xml
<CustomField>
    <fullName>Company_Facebook__c</fullName>
    <label>Company Facebook</label>
    <type>Url</type>
</CustomField>