force-app/main/default/objects/Competitor__c/fields/Company_News_Page__c.field-meta.xml
<CustomField>
    <fullName>Company_News_Page__c</fullName>
    <label>Company News Page</label>
    <type>Url</type>
</CustomField>