force-app/main/default/objects/Competitor__c/fields/Company_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Company_Opportunities__c</fullName>
    <label>Company Opportunities</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>