force-app/main/default/objects/Competitor__c/fields/Company_Strengths__c.field-meta.xml
<CustomField>
    <fullName>Company_Strengths__c</fullName>
    <label>Company Strengths</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>