force-app/main/default/objects/Competitor__c/fields/Company_Threats__c.field-meta.xml
<CustomField>
    <fullName>Company_Threats__c</fullName>
    <label>Company Threats</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>