force-app/main/default/objects/Competitor__c/fields/Competes_With__c.field-meta.xml
<CustomField>
    <fullName>Competes_With__c</fullName>
    <label>Competes With</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>DB&amp;R</fullName>
            </value>
            <value>
                <fullName>DMS</fullName>
            </value>
            <value>
                <fullName>Entertainment Services</fullName>
            </value>
            <value>
                <fullName>Health Information Mgmt</fullName>
            </value>
            <value>
                <fullName>Intellectual Property Mgmt</fullName>
            </value>
            <value>
                <fullName>Records Management</fullName>
            </value>
            <value>
                <fullName>Secure Shredding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>