force-app/main/default/objects/Competitor__c/recordTypes/Competitors.recordType-meta.xml
<RecordType>
    <fullName>Competitors</fullName>
    <active>true</active>
    <description>Competitor Record Type</description>
    <label>Competitors</label>
</RecordType>