force-app/main/default/objects/Competitor__c/recordTypes/Top_Competitors.recordType-meta.xml
<RecordType>
    <fullName>Top_Competitors</fullName>
    <active>true</active>
    <description>Top Competitors Record Type</description>
    <label>Top Competitors</label>
</RecordType>