force-app/main/default/objects/Competitor__c/listViews/Top_Competitors.listView-meta.xml
<ListView>
    <fullName>Top_Competitors</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Competitor__c.Top_Competitors</value>
    </filters>
    <label>Top Competitors</label>
    <language>en_US</language>
</ListView>